파이썬 예제 커밋

--- a/Pandas(MultiIndexing).ipynb
+++ b/Pandas(MultiIndexing).ipynb
@@ -784,6 +784,420 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000    33871648\n",
+       "2010    37253956\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#MultiIndex는 부분 인덱싱(partial indexing)이나 인덱스 레벨 중 하나만 인덱싱하는 것도 지원한다.\n",
+    "pop['California']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California  2000    33871648\n",
+       "            2010    37253956\n",
+       "New York    2000    18976457\n",
+       "            2010    19378102\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#정렬되어 있다면 부분 슬라이싱도 가능\n",
+    "pop['California' : 'New York']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California    33871648\n",
+       "New York      18976457\n",
+       "Texas         20851820\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop[:, 2000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California  2000    33871648\n",
+       "            2010    37253956\n",
+       "Texas       2010    25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#부울 마스크를 이용해 데이터를 선택할 수 있다.\n",
+    "pop[pop > 22000000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California  2000    33871648\n",
+       "            2010    37253956\n",
+       "Texas       2000    20851820\n",
+       "            2010    25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#팬시 인덱싱을 이용한 데이터 선택도 가능\n",
+    "pop[['California', 'Texas']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#열의 MultiIndex\n",
+    "#계층적 인덱스와 열\n",
+    "index = pd.MultiIndex.from_product([[2013, 2014], [1,2]], names=['year', 'visit'])\n",
+    "columns = pd.MultiIndex.from_product([['Bob', 'Guido', 'Sue'], ['HR', 'Temp']], names=['subject', 'type'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex(levels=[[2013, 2014], [1, 2]],\n",
+      "           labels=[[0, 0, 1, 1], [0, 1, 0, 1]],\n",
+      "           names=['year', 'visit'])\n",
+      "MultiIndex(levels=[['Bob', 'Guido', 'Sue'], ['HR', 'Temp']],\n",
+      "           labels=[[0, 0, 1, 1, 2, 2], [0, 1, 0, 1, 0, 1]],\n",
+      "           names=['subject', 'type'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(index);\n",
+    "print(columns);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#일부 데이터 모형 만들기\n",
+    "data = np.round(np.random.rand(4, 6), 1)\n",
+    "data[:, ::2] *= 10\n",
+    "data += 37"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>subject</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Bob</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Guido</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Sue</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>Temp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th>visit</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2013</th>\n",
+       "      <th>1</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>37.1</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>37.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46.0</td>\n",
+       "      <td>37.1</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>37.1</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>37.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2014</th>\n",
+       "      <th>1</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>37.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46.0</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>37.3</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>37.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "subject      Bob       Guido         Sue      \n",
+       "type          HR  Temp    HR  Temp    HR  Temp\n",
+       "year visit                                    \n",
+       "2013 1      42.0  37.1  44.0  38.0  45.0  37.2\n",
+       "     2      46.0  37.1  45.0  37.1  45.0  37.3\n",
+       "2014 1      40.0  37.8  40.0  37.2  38.0  37.1\n",
+       "     2      46.0  37.5  42.0  37.3  40.0  37.5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#DataFrame 생성하기\n",
+    "health_data = pd.DataFrame(data, index=index, columns = columns)\n",
+    "health_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>Temp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th>visit</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2013</th>\n",
+       "      <th>1</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>37.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2014</th>\n",
+       "      <th>1</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>37.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>37.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type          HR  Temp\n",
+       "year visit            \n",
+       "2013 1      44.0  38.0\n",
+       "     2      45.0  37.1\n",
+       "2014 1      40.0  37.2\n",
+       "     2      42.0  37.3"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "health_data['Guido']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year  visit\n",
+       "2013  1        44.0\n",
+       "      2        45.0\n",
+       "2014  1        40.0\n",
+       "      2        42.0\n",
+       "Name: (Guido, HR), dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "health_data['Guido', 'HR']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(health_data['Guido', 'HR'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
