--- a/Pandas(USstates).ipynb
+++ b/Pandas(USstates).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4           AL  under18  2011   1125763.0  Alabama"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -277,19 +277,19 @@
        "2452           PR    total  1993         NaN   NaN"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged[merged['population'].isnull()].head()  \n",
-    "#2010년전 PR의 데이터에 인구가 없다는 것을 알 수 있음, state 가 null인 것은 맵핑 값이 없음을 의미"
+    "merged[merged['population'].isnull()].head()\n",
+    "#2010년전 PR의 데이터에 인구가 없다는 것을 알 수 있음, state 가 null인 것은 맵핑 값이 없음을 의미|"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "array(['PR', 'USA'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "4           AL  under18  2011   1125763.0  Alabama        52423.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "array(['United Sates'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "4           AL  under18  2011   1125763.0  Alabama        52423.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -682,21 +682,82 @@
        "197           CA  total  2010  37333601.0  California       163707.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data2010 = final.query(\"year == 2010 & ages == 'total'\")\n",
+    "data2010 = final.query(\"year == 2010 & ages == 'total'\") #Query the columns of a frame with a boolean expression.\n",
     "data2010.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     state/region   ages  year  population  area (sq. mi)\n",
+      "state                                                                    \n",
+      "Alabama                        AL  total  2010   4785570.0        52423.0\n",
+      "Alaska                         AK  total  2010    713868.0       656425.0\n",
+      "Arizona                        AZ  total  2010   6408790.0       114006.0\n",
+      "Arkansas                       AR  total  2010   2922280.0        53182.0\n",
+      "California                     CA  total  2010  37333601.0       163707.0\n",
+      "Colorado                       CO  total  2010   5048196.0       104100.0\n",
+      "Connecticut                    CT  total  2010   3579210.0         5544.0\n",
+      "Delaware                       DE  total  2010    899711.0         1954.0\n",
+      "District of Columbia           DC  total  2010    605125.0           68.0\n",
+      "Florida                        FL  total  2010  18846054.0        65758.0\n",
+      "Georgia                        GA  total  2010   9713248.0        59441.0\n",
+      "Hawaii                         HI  total  2010   1363731.0        10932.0\n",
+      "Idaho                          ID  total  2010   1570718.0        83574.0\n",
+      "Illinois                       IL  total  2010  12839695.0        57918.0\n",
+      "Indiana                        IN  total  2010   6489965.0        36420.0\n",
+      "Iowa                           IA  total  2010   3050314.0        56276.0\n",
+      "Kansas                         KS  total  2010   2858910.0        82282.0\n",
+      "Kentucky                       KY  total  2010   4347698.0        40411.0\n",
+      "Louisiana                      LA  total  2010   4545392.0        51843.0\n",
+      "Maine                          ME  total  2010   1327366.0        35387.0\n",
+      "Maryland                       MD  total  2010   5787193.0        12407.0\n",
+      "Massachusetts                  MA  total  2010   6563263.0        10555.0\n",
+      "Michigan                       MI  total  2010   9876149.0        96810.0\n",
+      "Minnesota                      MN  total  2010   5310337.0        86943.0\n",
+      "Mississippi                    MS  total  2010   2970047.0        48434.0\n",
+      "Missouri                       MO  total  2010   5996063.0        69709.0\n",
+      "Montana                        MT  total  2010    990527.0       147046.0\n",
+      "Nebraska                       NE  total  2010   1829838.0        77358.0\n",
+      "Nevada                         NV  total  2010   2703230.0       110567.0\n",
+      "New Hampshire                  NH  total  2010   1316614.0         9351.0\n",
+      "New Jersey                     NJ  total  2010   8802707.0         8722.0\n",
+      "New Mexico                     NM  total  2010   2064982.0       121593.0\n",
+      "New York                       NY  total  2010  19398228.0        54475.0\n",
+      "North Carolina                 NC  total  2010   9559533.0        53821.0\n",
+      "North Dakota                   ND  total  2010    674344.0        70704.0\n",
+      "Ohio                           OH  total  2010  11545435.0        44828.0\n",
+      "Oklahoma                       OK  total  2010   3759263.0        69903.0\n",
+      "Oregon                         OR  total  2010   3837208.0        98386.0\n",
+      "Pennsylvania                   PA  total  2010  12710472.0        46058.0\n",
+      "Rhode Island                   RI  total  2010   1052669.0         1545.0\n",
+      "South Carolina                 SC  total  2010   4636361.0        32007.0\n",
+      "South Dakota                   SD  total  2010    816211.0        77121.0\n",
+      "Tennessee                      TN  total  2010   6356683.0        42146.0\n",
+      "Texas                          TX  total  2010  25245178.0       268601.0\n",
+      "Utah                           UT  total  2010   2774424.0        84904.0\n",
+      "Vermont                        VT  total  2010    625793.0         9615.0\n",
+      "Virginia                       VA  total  2010   8024417.0        42769.0\n",
+      "Washington                     WA  total  2010   6742256.0        71303.0\n",
+      "West Virginia                  WV  total  2010   1854146.0        24231.0\n",
+      "Wisconsin                      WI  total  2010   5689060.0        65503.0\n",
+      "Wyoming                        WY  total  2010    564222.0        97818.0\n",
+      "Puerto Rico                    PR  total  2010   3721208.0         3515.0\n"
+     ]
+    }
+   ],
    "source": [
     "#인구 밀도를 계산하고 순서대로 표시\n",
     "# 주 기준으로 데이터 인덱스를 재배열\n",
@@ -706,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +782,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
