연습장 추가

--- a/scikit-learn/지도학습관련 연습장.ipynb
+++ b/scikit-learn/지도학습관련 연습장.ipynb
@@ -352,6 +352,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "훈련 세트 점수: 0.95\n",
+      "테스트 세트 점수: 0.61\n"
+     ]
+    }
+   ],
+   "source": [
+    "# alpha가 0이면, 규제가 없으므로, 모델복잡도는 높아지고 일반화되지 않음\n",
+    "ridge0 = Ridge(alpha=0).fit(X_train, y_train)\n",
+    "print(\"훈련 세트 점수: {:.2f}\".format(ridge0.score(X_train, y_train)))\n",
+    "print(\"테스트 세트 점수: {:.2f}\".format(ridge0.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
